--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,7 @@ body {
   grid-template-rows: minmax(120px, auto) repeat(5, 100px);
   justify-content: center;
   align-content: center;
-  min-height: 100vh; 
-  box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.25),
-             -20px -20px 20px #FFFFFF;
+  min-height: 100vh;
 }
 
 .item {
@@ -26,6 +24,7 @@ body {
   border: solid 3px white;
   outline: none;
   background-color: rgba(255,255,255,0.75);
+  /* margin: 3px; */
 }
 
 .item:hover {
@@ -35,7 +34,7 @@ body {
 .span-two {
   grid-column: span 2;
 }
-#ac {
+#clear {
   color: tomato;
 }
 #equals {
