--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,7 @@ body {
 }
 
 .whole-formula {
+  min-height: 40px;
   color: rgba(0,0,0,0.75);
   position: relative;
 }
@@ -73,6 +74,8 @@ body {
 }
 
 .current-number{
+  min-height: 60px;
+
   color: black;
   font-size: 2.5rem;
 }
