--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,16 @@ body {
   background-color: #eee;
 }
 .container {
+  display: flex;
+  justify-content: space-evenly;
+}
+.calc-container {
   display: grid;
   grid-template-columns: repeat(4, 100px);
   grid-template-rows: minmax(120px, auto) repeat(5, 100px);
   justify-content: center;
   align-content: center;
-  min-height: 100vh;
+  min-height: 50vh;
 }
 
 .item {
@@ -78,4 +82,16 @@ body {
 
   color: black;
   font-size: 2.5rem;
+}
+
+#history{
+  display: flex;
+  width: 30vw;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.history-item {
+  margin-bottom: 20px;
+  margin-right: 10px;
 }
