--- a/styles.css
+++ b/styles.css
@@ -94,4 +94,9 @@ body {
 .history-item {
   margin-bottom: 20px;
   margin-right: 10px;
+  cursor: pointer;
+  font-size: 1.5rem;
+  border: solid 3px white;
+  outline: none;
+  background-color: rgba(255,255,255,0.75);
 }
